katesessionmanager: Make Actions of desktop file start new instance of Kate

Otherwise, we attach to an existing instance.
The runner and Applet also start a new instance.

BUG: 461184